<resources>

    <!--    Zaid-Strings-->
    <string name="app_name">BlueSky Cinema</string>
    <string name="avSeat">26</string>
    <string name="textView_showDate" />
    <string name="movie1">John Wick 3</string>
    <string name="movie2">Venom</string>
    <string name="movie3">Spider-Man</string>
    <string name="time1">10:00 AM</string>
    <string name="time2">2:00 PM</string>
    <string name="time3">7:00 PM</string>
    <string name="continue1">Continue</string>
    <string name="totalSeats">200</string>
    <string name="avSeats">26</string>
    <string name="totalBox">15</string>
    <string name="avBox">11</string>
    <string name="editFullTckts" />
    <string name="editBoxTckts" />
    <string name="totalTckts">2</string>
    <string name="amount">Rs. 650.00</string>
    <string name="movieName">John Wick 3</string>
    <string name="print_date">12-08-2021</string>
    <string name="print_time">8:30 PM</string>
    <string name="print_tot">Rs. 650.00</string>
    <string name="apply">Apply</string>
    <string name="show_dis">Rs. 150.00</string>
    <string name="show_amnt">Rs. 500.00</string>
    <string name="confirm">Confirm</string>
    <string name="number_get">07XXXXXXX</string>
    <string name="reserveBtn">Resrve Now</string>
    <string name="totalSeats1">200</string>
    <string name="avSeats1">25</string>
    <string name="totalBox1">15</string>
    <string name="avBox1">11</string>
    <string name="editFullTckts1" />
    <string name="editBoxTckts2" />
    <string name="totalTckts2">2</string>
    <string name="amount1">Rs. 1300.00</string>
    <string name="updateBtn2">Update</string>
    <string name="movieName2">John Wick 3</string>
    <string name="print_date1">12-08-2021</string>
    <string name="print_time1">8:30 PM</string>
    <string name="print_tot1">Rs. 650.00</string>
    <string name="edit2">Edit</string>
    <string name="remove">Remove</string>


    <!--    Janani-Strings-->
    <string name="main_add_button1">+Add</string>
    <string name="main_add_button2">+Add</string>
    <string name="main_add_button3">+Add</string>
    <string name="main_add_button4">+Add</string>
    <string name="main_add_button5">+Add</string>
    <string name="main_add_button6">+Add</string>
    <string name="addtocart_button">Add to Cart</string>
    <string name="myCart_noOfItems">4</string>
    <string name="myCart_totalPrice">Rs.400.00</string>
    <string name="myCart_button" />
    <string name="myCart_confirmButton">Confirm</string>
    <string name="myCart_deleteButton">Delete</string>
    <string name="selectFood_itemIncrease">1</string>
    <string name="myCart_itemIncrease1">1</string>
    <string name="myCart_itemIncrease2">1</string>
    <string name="myCart_itemIncrease3">1</string>
    <string name="myCart_itemIncrease4">1</string>
    <string name="notification_Order1">Order ID 56788</string>
    <string name="notification_Order2">Order ID 98566</string>
    <string name="notification_Order3">Order ID 45896</string>
    <string name="notification_Order4">Order ID 34789</string>
    <string name="notification_Order5">Order ID 23412</string>
    <string name="notification_Order6">Order ID 89347</string>
    <string name="notification_orderReceiveTime1">5 minute ago</string>
    <string name="notification_orderReceiveTime2">17 minute ago</string>
    <string name="notification_orderReceiveTime3">46 minute ago</string>
    <string name="notification_orderReceiveTime4">2 hours ago</string>
    <string name="notification_orderReceiveTime5">7 hours ago</string>
    <string name="notification_orderReceiveTime6">1 day ago</string>
    <string name="viewOrder_cusName">  Imasha Kuruppu</string>
    <string name="viewOrder_contactNum">0717073719</string>
    <string name="viewOrder_sheetNum">L4003</string>
    <string name="viewOrder_orderID">155666</string>
    <string name="viewOrder_dateTime">15/02/2021</string>
    <string name="viewOrder_product1">Coca Cola</string>
    <string name="viewOrder_product2">Pepsi</string>
    <string name="viewOrder_product3">7Up</string>
    <string name="viewOrder_product4">Popcorn</string>
    <string name="viewOrder_noOfItems1">1</string>
    <string name="viewOrder_noOfItems2">1</string>
    <string name="viewOrder_noOfItems3">1</string>
    <string name="viewOrder_noOfItems4">1</string>
    <string name="viewOrder_nextButton">Next</string>
    <string name="viewOrder_numberOfItems">4</string>
    <string name="viewOrder_totalPrice">Rs.400.00</string>
    <string name="viewOrder_closeOrderButton">Close Order</string>
    <string name="viewOrder_printBillButton">Print E-Bill</string>
    <string name="addFood_foodName">Enter Food Name</string>
    <string name="addFood_uploadImageButton">Upload Image</string>
    <string name="addFood_price">Enter Price</string>
    <string name="addFood_submitButton">Submit</string>
    <string name="FoodList">Food List</string>
    <string name="updateFood">Update Food</string>/>


    <!--    Imasha-Strings-->
    <string name="userName">Imasha Kuruppu</string>
    <string name="userEmail">imashakuruppu25@gmail.com</string>
    <string name="userPhone">076 900 7598</string>
    <string name="userBday">April 25, 1999</string>
    <string name="changePhoto">Change Photo</string>
    <string name="review">"John Wick Chapter 3 offers great action and a more in-depth
        at his World in comparison to the first two entries. "</string>
    <string name="header_profile">Profile</string>
    <string name="totpoints">123</string>
    <string name="totalpoints">123</string>
    <string name="totwatched">06</string>
    <string name="acc_info">Account Information</string>
    <string name="my_reserv">My Reservation</string>
    <string name="theater_rating">Rating Theater</string>
    <string name="privacy">Privacy Policy</string>
    <string name="header_favourite">My Favoueites</string>
    <string name="fav_btn">Favourites</string>
    <string name="nowshowing_btn">Now Showing</string>
    <string name="movie_type">Crime</string>
    <string name="movie_duration">2hr 10m | R</string>
    <string name="remove_fev">Remove</string>
    <string name="movie_name2">Blade Runner 2045</string>
    <string name="movie_name3">Alita</string>
    <string name="movie_4">Kid King</string>
    <string name="details"> Details</string>
    <string name="review_pg_btn">Reviews</string>
    <string name="header_accinfo">Account Information</string>
    <string name="header_writereview">Write a Review</string>
    <string name="header_review">Reviews</string>
    <string name="theater_name">BlueSky Cinema</string>
    <string name="address">137, Kandy Road, Kadawatha</string>
    <string name="mobile">011 2 975 889</string>
    <string name="email">bluskycinema@gmail.com</string>
    <string name="about">A movie theater, cinema, or cinema hall, also known as a picture house, the pictures, picture theatre, or the movies, is a building that contains auditoria for. viewing films for entertainment. Most, but not all, theaters are commercial operations catering to the general public, who attend by purchasing a ticket.</string>
    <string name="theater_feedback">Enter your feedback here....</string>


    <!--    Hasith-Strings-->
    <string name="ongoing_movies_btn">10</string>
    <string name="total_booking_btn">125</string>
    <string name="total_ratings_btn">21</string>
    <string name="total_orders_btn">19</string>
    <string name="login_btn">Login</string>
    <string name="signup_btn">Sign Up</string>
    <string name="login_submit_btn">Login</string>
    <string name="login_username" />
    <string name="login_password" />
    <string name="forgot_password">Forgot Password?</string>
    <string name="signup_username" />
    <string name="signup_email" />
    <string name="signup_contact" />
    <string name="signup_password" />
    <string name="signup_reenter_password" />
    <string name="signup_submit_btn">Create Account</string>
    <string name="homepage_nowshowing">Now Showing</string>
    <string name="homepage_favourites">Favourites</string>
    <string name="home_movie1_name">John Wick 3</string>
    <string name="homepage_movie1_duration">2hr 10min</string>
    <string name="home_movie2_name">Captain Marvel</string>
    <string name="homepage_movie2_duration">2hr 25min</string>
    <string name="movie_details_name">John Wick 3: Parabellum</string>
    <string name="movie_details_year">2018</string>
    <string name="movie_details_duration">2hr 10m | R</string>
    <string name="movie_details_genre">Action, Crime, Thriller</string>
    <string name="movie_details_details">Details</string>
    <string name="movie_details_reviews">Reviews</string>
    <string name="movie_detals_reservations">Reserve Now</string>
    <string name="edit_movies_edit">Edit</string>
    <string name="edit_movies_delete">Delete</string>
    <string name="add_movie_movie_name" />
    <string name="add_movie_duration" />
    <string name="add_movie_year" />
    <string name="add_movie_genre" />
    <string name="add_movie_description" />
    <string name="add_movie_next">Next</string>
    <string name="add_movie_cast" />
    <string name="add_movie_main_image">Upload Image</string>
    <string name="add_movie_cover_image">Upload Image</string>
    <string name="add_movie_upload_trailer" />
    <string name="add_movie_next2">Next</string>
    <string name="add_movie_starting_date">JUL 01 2021</string>
    <string name="add_movie_ending_date">SEP 01 2021</string>
    <string name="add_movie_submit">Submit</string>
    <string name="time_slot_1">08:30 AM</string>
    <string name="time_slot_2">10:30 AM</string>
    <string name="time_slot_3">01:30 PM</string>
    <string name="time_slot_4">03:30 PM</string>
    <string name="time_slot_5">06:00 PM</string>
    <string name="time_slot_6">10:00 PM</string>
    <string name="menu_home">Home</string>
    <string name="menu_add_movies">Add Movies</string>
    <string name="menu_now_showing">Now Showing</string>
    <string name="menu_reservations">Reservations</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_reports">Reports</string>
    <string name="menu_theater_rating">Theater Rating</string>
    <string name="menu_logout">Logout</string>

</resources>