<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0F1B2B"
    tools:context=".Zaid.EditReservation">

    <ImageView
        android:id="@+id/arraow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/myReservation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="My Reservation"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider7"
        android:layout_width="411dp"
        android:layout_height="1dp"
        android:layout_marginTop="52dp"
        android:background="@color/toolbar_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/moviePoster"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/m5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider7" />

    <View
        android:id="@+id/view_summery"
        android:layout_width="350dp"
        android:layout_height="220dp"
        android:background="#2B3543"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moviePoster" />

    <TextView
        android:id="@+id/movieName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/movieName2"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/view_summery"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/view_summery"
        app:layout_constraintTop_toBottomOf="@+id/moviePoster" />

    <TextView
        android:id="@+id/view_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:text="Date"
        android:textColor="#8F8F8F"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/view_summery"
        app:layout_constraintTop_toBottomOf="@+id/movieName2" />

    <TextView
        android:id="@+id/view_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:text="Time"
        android:textColor="#8F8F8F"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/view_date"
        app:layout_constraintEnd_toEndOf="@+id/view_summery" />

    <TextView
        android:id="@+id/print_date1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/print_date1"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/view_summery"
        app:layout_constraintTop_toBottomOf="@+id/view_date" />

    <TextView
        android:id="@+id/view_tot"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginBottom="20dp"
        android:text="Total Amount"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view_summery"
        app:layout_constraintStart_toStartOf="@+id/view_summery" />

    <TextView
        android:id="@+id/print_tot1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/print_tot1"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/view_tot"
        app:layout_constraintEnd_toEndOf="@+id/view_summery" />

    <TextView
        android:id="@+id/print_time1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/print_time1"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/print_date1"
        app:layout_constraintEnd_toEndOf="@+id/view_summery" />

    <Button
        android:id="@+id/remove"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/green_btn"
        android:fontFamily="sans-serif"
        android:text="@string/remove"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:backgroundTint="#E51937"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.323"
        app:layout_constraintStart_toEndOf="@+id/edit2" />

    <Button
        android:id="@+id/edit2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/green_btn"
        android:fontFamily="sans-serif"
        android:text="@string/edit2"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:backgroundTint="#4CD964"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_summery" />

</androidx.constraintlayout.widget.ConstraintLayout>